# intarsia

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  release.toml
.github/workflows/: rust.yml
docs/: framework_implementation_summary.md  initial_framework.md  isle_cascades.md  isle_integration_guide.md  isle_optimizer_rules.md  multegraph.md  notes.md
docs/development_notes/: framework_generalization_plan.md
examples/boolean_optimizer/: main.rs  mod.rs  tests.rs
examples/boolean_optimizer/isle/: rules.isle  rules.rs
examples/database_optimizer/: context.rs  cost.rs  language.rs  main.rs  mod.rs  property.rs  tests.rs  types.rs
examples/database_optimizer/catalog/: column.rs  index.rs  mod.rs  table.rs
examples/database_optimizer/isle/: rules.isle  rules.rs
examples/rewrite_explorer/: main.rs  mod.rs
examples/rewrite_explorer/isle/: rules.isle  rules.rs
intarsia-build/: CHANGELOG.md  Cargo.toml
intarsia-build/src/: lib.rs
intarsia-macros/: CHANGELOG.md  Cargo.toml
intarsia-macros/src/: lib.rs
opt-macros/: Cargo.toml
opt-macros/src/: lib.rs
src/: build.rs  cascades.rs  context.rs  cost.rs  costlang.rs  egg.rs  egraph.rs  explore.rs  lib.rs  macros.rs  main.rs  multegraph.rs  optimizer.rs  optlang.rs  parser.rs  property.rs  propertymap.rs  rule.rs  test_context.rs  testlang.rs  types.rs  unionfind.rs
src/catalog/: column.rs  index.rs  mod.rs  table.rs
src/framework/: cost.rs  hooks.rs  language_ext.rs  mod.rs  optimizer.rs  property.rs  task.rs
src/isle/: rules.isle  test.isle
