[workspace]
members = [".", "intarsia-build", "intarsia-macros"]
resolver = "3"

[package]
name = "intarsia"
version = "0.1.0"
edition = "2024"
authors = ["Sarah Morin <sarahmorin@berkeley.edu>"]
license-file = "LICENSE"
description = "A Rust framework for building optimizers using e-graphs and ISLE"

[features]
default = []
build-helpers = ["dep:cranelift-isle"]

[build-dependencies]
intarsia-build = { path = "intarsia-build" }

[dependencies]
bimap = "0.6.3"
cranelift-isle = { version = "0.128.1", features = [
    "fancy-errors",
    "log",
    "logging",
], optional = true }
egg = { git = "https://github.com/sarahmorin/egg.git", branch = "intarsia" }
# HACK: Use a local path dependency for egg during development to avoid git overhead and allow for easy code changes
# egg = { path = "../egg" }
indexmap = "2.13.0"
log = "0.4.29"
intarsia-macros = { path = "intarsia-macros" }

[dev-dependencies]
env_logger = "0.11"

[[example]]
name = "database_optimizer"
path = "examples/database_optimizer/main.rs"

[[example]]
name = "boolean_optimizer"
path = "examples/boolean_optimizer/main.rs"
