[package]
name = "intarsia-build"
version = "0.1.0"
edition = "2024"
authors = ["Sarah Morin <sarahmorin@berkeley.edu>"]
license-file = "../LICENSE"
description = "Build helpers for compiling ISLE files in build scripts"

[dependencies]
cranelift-isle = { version = "0.128.1", features = [
    "fancy-errors",
    "log",
    "logging",
] }
