[package]
name = "intarsia-build"
description = "Build helpers for compiling ISLE rulset files in build scripts for Intarsia optimizers."

version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
readme.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
cranelift-isle = { version = "0.128.1", features = [
    "fancy-errors",
    "log",
    "logging",
] }
