[package]
name = "intarsia-macros"
version = "0.1.0"
edition = "2024"
authors = ["Sarah Morin <sarahmorin@berkeley.edu>"]
description = "Procedural macros for optimizer framework"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
